# gaalignops-app

./: DOWNLOAD_NOTES.md  OAUTH_SETUP.md  README.md  SETUP_AFTER_DOWNLOAD.md  SETUP_ENVIRONMENT_SEGREGATION.md  app.py  auth.py  consolidate_candidate_data.py  launch_app.sh  pyproject.toml  replit.md  requirements.txt  requirements_python39.txt  setup.sh  test_environment.py
config/: development.env  environments.py  module_structure.py  production.env
database_export_20250820_065100/: README.md  annual_targets.csv  assignment_change_log.csv  assignment_details.csv  assignment_history.csv  availability_history.csv  candidate_data.csv  candidate_roles.csv  candidate_status_backup_20250802_091612.csv  candidate_status_history.csv  code_pairing_backup_20250802.csv  dataaggregator.csv  dataaggregator_backup_20250802.csv  database_schema.json  demand_metadata.csv  demand_pipeline_stages.csv  demand_pipelines.csv  demand_planning.csv  demand_supply_assignments.csv  demand_supply_mapping_backup.csv  dev_candidate_data.csv  dev_dataaggregator.csv  dev_demand_metadata.csv  dev_demand_supply_assignments.csv  dev_master_clients.csv  dev_owner_targets.csv  dev_pipeline_planning_details.csv  dev_pipeline_stages.csv  dev_role_group_mappings.csv  dev_role_groups.csv  dev_roles.csv  dev_staffing_plan_generated_plans.csv  dev_staffing_plans.csv  dev_talent_pipelines.csv  dev_talent_supply.csv  dev_unified_sales_data.csv  dev_user_role_mappings.csv  dev_users.csv  duplicate_profile_backup_20250802.csv  export_summary.json  (+22 more)
docs/: EDIT_PIPELINE_INTERFACE.md
tests/: test_scheduler.py  (+9 more)
(+53 files in other folders)
